[gd_scene load_steps=2 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" path="res://scripts/enemies/mole_enemy.gd" id="1_0xqxq"]

[node name="MoleEnemy" type="CharacterBody3D"]
script = ExtResource("1_0xqxq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Particles" type="GPUParticles3D" parent="."]
emitting = false
amount = 30
lifetime = 1.0
one_shot = true
explosiveness = 0.9
direction = Vector3(0, 1, 0)
spread = 90.0
gravity = Vector3(0, -5, 0)
initial_velocity_min = 3.0
initial_velocity_max = 8.0
color = Color(0.5, 0.5, 0.5, 1)
